cli/tests/snapshot/inputs/errors/serialization_number_out_of_range.ncl
# capture = 'stderr'
# command = ['export']

1e400
